# llama-finetune

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  pyproject.toml
scripts/: deploy.sh
src/llama_finetune/: config.py  hf.py  logging.py
src/llama_finetune/cli/: finetune.py
src/voice_finetune/: __init__.py  config.py
src/voice_finetune/cli/: __init__.py  finetune.py
