[project]
name = "llama-finetune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "axolotl>=0.12.2",
    "loguru>=0.7.3",
    "pydantic>=2.10.6",
    "bitsandbytes; sys_platform == 'linux'",
    "wandb>=0.22.2",
]

[project.scripts]
finetune = "llama_finetune.cli.finetune:main"

[tool.setuptools]
package-dir = {"" = "src"}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
]
